fix: cleanup go api
